--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -38,14 +38,8 @@ Graphics:
 
 
 Current tasks:
-    - Add ability to setup tower again:
-        - First Pass
-            - When using the staff tower on screens with object with id `towerTerminal:desert` set tower position to desert.
-        - Maybe should create a staff tower object and use this instead of the current layer solution
-            - Then we can detect if you are facing the object and not standing inside it to deploy the tower.
-            - Would force the tower to look consistent and make it easy to update when we have better graphics
-            - Can also detect zone overworld vs sky to create the upper+lower parts correctly.
-            - Can render consistent ground graphics for when the tower is not present.
+
+    - Add Staff Tower to randomizer logic.
 
     - Flying enemies should not move over abyss tiles(make abyss tiles + ceiling tiles impassable to flying enemies).
 
@@ -124,6 +118,13 @@ Add more screen shakes:
         - Could have different combination of effects to signify attacks from each type of elemental beast
         - Could make sure these effects are also used when actually fighting the beasts for consistency
 
+Improve Staff Tower Setup:
+    - Maybe should create a staff tower object and use this instead of the current layer solution
+    - Then we can detect if you are facing the object and not standing inside it to deploy the tower.
+    - Would force the tower to look consistent and make it easy to update when we have better graphics
+    - Can also detect zone overworld vs sky to create the upper+lower parts correctly.
+    - Can render consistent ground graphics for when the tower is not present.
+    - Animation should be throwing staff into the sky as it grows with its shadow, then falls to the ground when the shadow is as large as the foundation.
 
 High level list of things left to do:
     New dungeons(need enemies, mechanics, bosses, entrances):
