--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -44,7 +44,6 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Bow takes extra mana with equipped element even while not charged
     - Pulling pots while wearing cloud walking boots is bugged
         - Force the player to be at minZ level when pulling pot
     - Screen shakes too much when defeating a boss
@@ -57,6 +56,7 @@ Current tasks:
     - Fix timing of robot sentry
         - add yellow targeting laser for longer part of first laser.
     - Add target landing locations when falling from sky (also apply to the forest temple pits).
+    - Bow frame is wrong direction shortly after firing diagonally.
 
     Warship
         - Requires all elements to complete
@@ -155,12 +155,17 @@ Staff Improvements:
 
 Throwing an object into a pit should make use the pit animation rather than breaking.
 
-Add advanced tutorials
-    - Maybe NPCs in home cave, or some kind of training/tutorial dojo?
-    - Hitting enemies with chakram held in hand
-    - Default Charged chakram attack
-    - Maybe different sections for different tools.
-    - Reflecting projectiles
+
+Tutorial Improvements:
+    - chest instructions are lost if you exit without obtaining the chakram.
+    - no instructions for picking up objects before obtaining the glove
+    Add advanced combat/tool tutorials
+        - Maybe NPCs in home cave, or some kind of training/tutorial dojo?
+        - Hitting enemies with chakram held in hand
+        - Default Charged chakram attack
+        - Enemy iframes prevent them from damaging you
+        - Maybe different sections for different tools.
+        - Reflecting projectiles
 
 Add more screen shakes:
     - Lava draining transition
