--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -45,6 +45,9 @@ Graphics:
 
 Current tasks:
     - Bow frame is wrong direction shortly after firing diagonally.
+    - Fix out of bounds in no tool cave.
+    - Add new tree graphics to spirit world.
+    - Investigate cache busting strategies for the demo.
 
     Warship
         - Requires all elements to complete
